--- a/styles/style.css
+++ b/styles/style.css
@@ -5,8 +5,10 @@
 
 .navbar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 24px;
+    margin-left: 50px;
+    margin-right: 90px;
 }
 
 .logo {
@@ -23,14 +25,14 @@
 }
 
 .banner-container {
-    margin: 117px 64px 117px 59px;
-    height: 420px;
-    background-color: #C6E4D6;
+    margin-left: 75px;
+    background-color: #98ccb4;
+    padding: 80px 100px 80px 100px;
+    height: 400px;
+    width: 1100px;
+    border-radius: 8px;
     display: flex;
     justify-content: space-around;
-    padding: 20px;
-    border-radius: 8px;
-    gap: 64px;
 }
 
 .banner-title {
@@ -52,7 +54,97 @@
     padding: 17px 34px;
     border-radius: 8px;
 }
-.img-1{
+
+.img-1 {
     width: 374px;
     height: 300px;
+}
+
+.target-container {
+    background-color: white;
+    padding: 20px;
+    margin: 20px;
+    margin-left: 40px;
+}
+
+.target-title {
+    margin-left: 40px;
+}
+
+.target-subtitle {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 40px;
+}
+
+.dt-box {
+    text-align: justify;
+    height: 200px;
+    width: 350px;
+    padding: 20px;
+    border-radius: 7px;
+    background-color: rgba(84, 144, 245, 0.2);
+}
+
+.gr-box {
+    text-align: justify;
+    height: 200px;
+    width: 350px;
+    padding: 20px;
+    border-radius: 7px;
+    background-color: rgba(198, 228, 214, 1);
+}
+
+.mi-box {
+    text-align: justify;
+    height: 200px;
+    width: 350px;
+    padding: 20px;
+    border-radius: 7px;
+    background-color: rgba(247, 235, 207, 1);
+}
+
+.box-container {
+    display: flex;
+    gap: 30px;
+    margin-left: 40px;
+    margin-top: 32px;
+}
+
+.padding-1 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.padding-2 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.padding-3 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+
+.bn-1 {
+    text-decoration: none;
+    color: white;
+    background-color: rgba(84, 144, 245, 1);
+    border-radius: 8%;
+    padding: 8px;
+}
+.bn-2{
+    text-decoration: none;
+    color: white;
+    background-color: rgba(9, 161, 92, 1); 
+    border-radius: 8%;
+    padding: 8px;
+}
+.bn-3{
+    text-decoration: none;
+    color: white;
+    background-color: rgba(255, 194, 57, 1);
+    border-radius: 8%;
+    padding: 8px;
+}
 }
