--- a/styles/style.css
+++ b/styles/style.css
@@ -190,8 +190,27 @@
 }
 
 .box1-btn {
-    margin-top: 10px;
+    margin-top: 20px;
     padding: 8px;
     background-color: rgba(0, 106, 80, 1);
     color: rgb(255, 255, 255);
+    border-radius: 8px;
+}
+.box2{
+    width: 97%;
+    display: flex;
+    justify-content: center;
+    margin-top: 48px;
+    background-color: #FFFFFF;
+}
+.box2-text{
+    padding-top: 15px;
+    font-weight: 85;
+}
+.box2-btn{
+    margin-top: 20px;
+    padding: 8px;
+    background-color: rgba(0, 106, 80, 1);
+    color: rgb(255, 255, 255);
+    border-radius: 8px;
 }
