--- a/styles/style.css
+++ b/styles/style.css
@@ -314,3 +314,18 @@
     font-weight: 54;
     font-size:small;
 }
+footer{
+    text-align: center;
+    width: 1145px;
+    height: 200px;
+    margin: 20px;
+    padding-bottom: 20px;
+    margin-left: 165px;
+    margin-top: 40px;
+}
+.footer-1{
+    padding-bottom: 20px;
+}
+.footer-2{
+    padding-top: 20px;
+}
